--- a/css/style.css
+++ b/css/style.css
@@ -25,4 +25,29 @@
        url("../fonts/robotobold.woff") format("woff");
 }
 
+/* Variables */
+
+:root {
+  --basic-color: #FFFFFF;
+  --background-special: #EEEEEE;
+  --accent-color: #FB565A;
+  --accent-color-green: #00CA74;
+  --accent-color-yellow: #EFC849;
+  --text-color:#000000;
+}
+
+body {
+  min-width: 1440px;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 500;
+  color: var(--text-color);
+  text-transform: uppercase;
+  background-color: var(--basic-color);
+  background-position: top center;
+  background-repeat: no-repeat;
+}
 
