--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,16 @@
 
 :root {
   --basic-color: #FFFFFF;
+  --basic-color-active: rgba(255, 255, 255, 0.3);
+  --basic-dark-hover: rgba(68, 68, 68, 0.5);
   --basic-black: #000000;
   --basic-dark: #666666;
   --basic-extra-dark: #283136;
+  --basic-gray-dark: #444444;
+  --basic-black-active: rgba(0, 0, 0, 0.3);
+  --gray-light: #B4B9BB;
   --basic-gray: #EEEEEE;
+  --basic-gray-light:#D7DCDE;
   --gray-hover: #DFDFDF;
   --gray-activ: #D5D5D5;
   --basic-red: #FB565A;
@@ -101,6 +107,10 @@ h1 {
   color: var(--basic-red);
 }
 
+.site-navigation a:active {
+  color: var(--basic-black-active);
+}
+
 /* User navigation */
 
 .site-navigation a,
@@ -110,6 +120,10 @@ h1 {
 
 .user-navigation a:hover {
   color: var(--basic-red);
+}
+
+.user-navigation a:active {
+  color: var(--basic-black-active);
 }
 
 /* Features */
@@ -152,18 +166,39 @@ font-weight: 400;
   border-radius: 3px;
 }
 
+.button:hover {
+  background-color: var(--red-hover);
+}
+
+.button:active {
+  background-color: var(--red-activ);
+  color: var(--basic-color-active);
+}
+
 .button-green {
   background-color: var(--button-basic-green);
+}
+
+.button-green:hover {
+  background-color: var(--button-app-hover);
+}
+
+.button-green:active {
+  background-color: var(--button-app-activ);
+  color: var(--basic-color-active);
 }
 
 .button-yellow {
   background-color: var(--button-basic-yellow);
 }
 
-.button:hover,
-.button:focus,
-.button:active {
-  background-color: var(--special);
+.button-yellow:hover {
+  background-color: var(--button-presentation-hover);
+}
+
+.button-yellow:active {
+  background-color: var(--button-presentation-activ);
+  color: var(--basic-color-active);
 }
 
 /* Services */
@@ -297,6 +332,40 @@ font-weight: 400;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
+}
+
+/* Popup */
+
+.appointment h2 {
+  font-size: 45px;
+  line-height: 53px;
+  font-weight: 700;
+  text-transform: none;
+}
+
+.appointment-item label {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 700;
+  text-transform: none;
+}
+
+.appointment-item input {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  background-color: transparent;
+  border: 2px solid var(--basic-gray-light);
+}
+
+.appointment-item input:hover {
+  border: 2px solid var(--gray-light);
+  color: var(--basic-dark-hover);
+}
+
+.appointment-item input:focus {
+  border: 2px solid var(--basic-black);
+  color: var(--basic-gray-dark);
 }
 
 /* Filters */
