--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,9 @@ h1 {
 }
 
 .features-list {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  margin: 0;
   list-style: none;
 }
 
@@ -274,12 +277,17 @@ font-weight: 400;
 
 /* Services */
 
-.services-list {
-  list-style: none;
+.services {
+  margin-bottom: 121px;
 }
 
-.services-content {
-  background-color: var(--gray-hover);
+.services-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 100px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .services-item p {
@@ -295,7 +303,24 @@ font-weight: 400;
   font-weight: 700;
   }
 
+
+  /* index-column */
+
+  .index-column {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 100px;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 73px;
+  }
+
   /* Company */
+
+.company {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  }
 
 .company p {
   text-transform: none;
@@ -308,6 +333,7 @@ font-weight: 400;
   text-transform: none;
   font-size: 45px;
   line-height: 45px;
+  font-weight: 500;
 }
 
 .company-list {
@@ -332,7 +358,17 @@ font-weight: 400;
   font-weight: 700;
 }
 
+.statistics dl {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
 .statistics dd {
+  grid-row: 1 / 2;
+  margin: 0;
   font-size: 45px;
   line-height: 64px;
   font-weight: 700;
@@ -353,7 +389,16 @@ font-weight: 400;
 
 /* Clients */
 
+.clients {
+  margin-bottom: 80px;
+}
+
 .clients-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 95px;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -377,6 +422,13 @@ font-weight: 400;
   color: var(--basic-dark);
 }
 
+.footer-columns {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 10px;
+  margin: 68px 240px 68px 40px;
+}
+
 .footer-social {
   text-align: left;
 }
@@ -397,12 +449,14 @@ font-weight: 400;
   font-size: 36px;
   line-height: 36px;
   font-weight: 700;
+  text-transform: none;
 }
 
 .promo-text {
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
+  text-transform: none;
 }
 
 /* Popup */
