--- a/css/style.css
+++ b/css/style.css
@@ -164,9 +164,17 @@ h1 {
 }
 
 .site-navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.site-navigation a {
+  padding-right: 45px;
 }
 
 .site-navigation a:hover {
@@ -178,6 +186,13 @@ h1 {
 }
 
 /* User navigation */
+
+.user-navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
 .site-navigation a,
 .user-navigation a {
@@ -515,6 +530,13 @@ font-weight: 400;
   margin: 0;
 }
 
+.filter fieldset {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 43px;
+  border: none;
+}
+
 .filter-group {
   font-size: 18px;
   line-height: 30px;
@@ -541,13 +563,24 @@ font-weight: 400;
 /* Sort */
 
 .sort {
+  display: flex;
+  flex-basis: 760px;
+  align-content: flex-start;
   grid-column: 2 / -1;
   padding: 0;
   margin: 0;
 }
 
+.heart-sort {
+  flex-grow: 1;
+}
+
 .sort-list{
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
   list-style: none;
+  padding: 0;
 }
 
 .sort-item a {
