--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,7 @@ font-weight: 400;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 40px;
+  min-height: 184px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -503,6 +504,7 @@ font-weight: 400;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 40px;
   margin-top: 68px;
+  margin-bottom: 76px;
 }
 
 .footer-social {
