--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,6 @@
   background-color: var(--basic-color);
   background-position: top center;
   background-repeat: no-repeat;
-
-  min-height: 100%;
-  display: grid;
-  grid-template-rows: min-content 1fr min-content;
-  align-content: start;
 }
 
 a {
@@ -88,10 +83,30 @@ img {
   height: auto;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* Grid */
 
 .page {
   height: 100%;
+}
+
+.page-body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 /* Main-header */
@@ -458,6 +473,7 @@ font-weight: 400;
 
 .clients-item {
   text-align: center;
+  margin: auto;
 }
 
 .clients-item img {
