--- a/css/style.css
+++ b/css/style.css
@@ -742,6 +742,7 @@ h1 {
 /* Filters */
 
 .filters {
+  width: 260px;
   grid-row: 1 / 3;
   padding: 0;
   margin: 0;
@@ -760,6 +761,7 @@ h1 {
   font-weight: 700;
   padding: 0;
   margin: 0;
+  margin-bottom: 16px;
 }
 
 .filter legend {
@@ -777,12 +779,51 @@ h1 {
   margin: 0;
 }
 
+.filter-option {
+  margin-bottom: 20px;
+  padding-left: 36px;
+}
+
+.filter-option label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+}
+
 .filter-input:hover + label {
   color: var(--basic-extra-dark);
 }
 
 .filter-input:disabled + label {
   color: var(--basic-filter-disabled);
+}
+
+.filter-input-checkbox:not(:checked) + label::before {
+  content: "";
+  position: absolute;
+  left: -36px;
+  top: -1px;
+  width: 23px;
+  height: 23px;
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.4;
+
+}
+
+.filter-input-checkbox:checked + label::after {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -36px;
+  width: 25px;
+  height: 23px;
+  background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.4;
 }
 
 /* Sort */
