--- a/css/style.css
+++ b/css/style.css
@@ -826,6 +826,30 @@ h1 {
   opacity: 0.4;
 }
 
+.filter-input-radio + label::before {
+  content: "";
+  position: absolute;
+  left: -36px;
+  top: -4px;
+  width: 19px;
+  height: 19px;
+  border: 4px solid var(--basic-filter);
+  border-radius: 50%;
+  opacity: 0.4;
+}
+
+.filter-input-radio:checked + label::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -27px;
+  width: 8px;
+  height: 8px;
+  background-color: var(--basic-filter);
+  border-radius: 50%;
+  opacity: 0.4;
+}
+
 /* Sort */
 
 .sort {
