--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,9 @@
   --filter-light: rgba(77, 77, 77, 0.4);
   --basic-filter-disabled: rgba(40, 49, 54, 0.3);
   --pagination-light: #DBDBDB;
+  --gray-light-150: #ABABAB;
   --gray-light: #B4B9BB;
+  --gray-light-100: #f1f1f1;
   --gray-super-light: #C1C1C1;
   --basic-gray: #EEEEEE;
   --basic-color-gray: #E1E1E1;
@@ -359,10 +361,10 @@ h1 {
 .slider-controls .current::after {
   content: "";
   position: absolute;
-  width: 6px;
-  height: 6px;
-  top: 2px;
-  left: 2px;
+  width: 4px;
+  height: 4px;
+  top: 3px;
+  left: 3px;
   background-color: var(--basic-color);
   border: 2px solid var(--gray-super-light);
   border-radius: 50%;
@@ -768,6 +770,78 @@ h1 {
   margin-bottom: 13px;
 }
 
+.range-filter {
+  width: 260px;
+  margin-top: 35px;
+}
+
+.range-controls {
+  position: relative;
+  height: 41px;
+  margin-bottom: 15px;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+  background-color: var(--gray-light-100);
+  border-radius: 5px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: #d7dcde;
+}
+
+.range-controls .bar {
+  width: 70%;
+  height: 2px;
+  background: var(--button-basic-green);
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 31px;
+  left: 0;
+  width: 4px;
+  height: 4px;
+  padding: 0;
+  border: 8px solid var(--basic-color);
+  background-color: var(--gray-light-150);
+  border-radius: 50%;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 18px;
+}
+
+.range-controls .toggle-max {
+  left: 160px;
+}
+
+.price-controls {
+  display: flex;
+  justify-content: space-between;
+}
+
+.price-controls label {
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.price-controls input {
+  width: 60px;
+  padding: 10px;
+  margin-left: 10px;
+  text-align: center;
+  color: #283136;
+  border: none;
+  border-radius: 5px;
+  background: #f1f1f1;
+  font-family: inherit;
+  font-size: inherit;
+}
+
 .filter ul {
   list-style: none;
   text-transform: none;
@@ -843,8 +917,8 @@ h1 {
   position: absolute;
   top: 5px;
   left: -27px;
-  width: 8px;
-  height: 8px;
+  width: 9px;
+  height: 9px;
   background-color: var(--basic-filter);
   border-radius: 50%;
   opacity: 0.4;
@@ -856,20 +930,21 @@ h1 {
   display: flex;
   flex-basis: 760px;
   align-content: flex-start;
+  justify-content: space-between;
   grid-column: 2 / -1;
   padding: 0;
   margin: 0;
-  margin-bottom: 48px;
+  margin-bottom: 32px;
 }
 
 .heart-sort {
-  flex-grow: 1;
+  margin-right: 40px;
 }
 
-.sort-list{
+.sort-list {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-end;
+  justify-content: space-between;
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
@@ -900,8 +975,8 @@ h1 {
   opacity: 0.2;
 }
 
-.sort-list .arrow:first-child {
-  margin-left: 24px;
+.sort-list .arrow-down {
+  margin-left: 25px;
 }
 
 .sort-list .arrow:hover {
@@ -928,6 +1003,7 @@ h1 {
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-bottom: 54px;
 }
 
 .template-item {
@@ -936,6 +1012,20 @@ h1 {
   min-height: 578px;
   margin: 0;
   padding: 0;
+  padding-top: 40px;
+}
+
+.template-item::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 358px;
+  height: 40px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: var(--basic-filter);
+  opacity: 0.12;
 }
 
 .template-item-description {
@@ -996,10 +1086,20 @@ h1 {
 /* Pagination */
 
 .pagination-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 
+.pagination-item {
+  margin-right: 11px;
+}
+
 .pagination-item a {
+  display: block;
+  padding: 13px 22px;
   color: var(--basic-black);
   background-color: var(--basic-gray);
   border-radius: 3px;
@@ -1008,13 +1108,6 @@ h1 {
 .pagination-item a:hover {
   color: var(--basic-black);
   background-color: var(--gray-hover);
-  border-radius: 3px;
-}
-
-.pagination-item a:hover {
-  color: var(--basic-black-active);
-  background-color: var(--gray-activ);
-  border-radius: 3px;
 }
 
 .pagination-item-current a,
@@ -1024,4 +1117,13 @@ h1 {
   background-color: var(--black-light);
   border: 3px solid var(--pagination-light);
   border-radius: 3px;
+  padding: 10px 19px;
+}
+
+.next a {
+  padding: 13px 78px;
+}
+
+.pagination-item:last-child {
+  margin-right: 0;
 }
