--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,77 @@ h1 {
   position: relative;
 }
 
+/* Button */
+
+.button {
+  display: inline-block;
+  padding: 16px 54px;
+  font: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  text-align: center;
+  color: var(--basic-color);
+  vertical-align: middle;
+  text-transform: uppercase;
+  background-color: var(--basic-red);
+  border: none;
+  border-radius: 3px;
+}
+
+.button:hover {
+  background-color: var(--red-hover);
+}
+
+.button:active {
+  background-color: var(--red-activ);
+  color: var(--basic-color-active);
+}
+
+.button-green {
+  background-color: var(--button-basic-green);
+}
+
+.button-green:hover {
+  background-color: var(--button-app-hover);
+}
+
+.button-green:active {
+  background-color: var(--button-app-activ);
+  color: var(--basic-color-active);
+}
+
+.button-yellow {
+  background-color: var(--button-basic-yellow);
+}
+
+.button-yellow:hover {
+  background-color: var(--button-presentation-hover);
+}
+
+.button-yellow:active {
+  background-color: var(--button-presentation-activ);
+  color: var(--basic-color-active);
+}
+
+.filter-button {
+  display: block;
+  width: 100%;
+  line-height: 18px;
+  background-color: var(--basic-gray);
+  color: var(--basic-black);
+}
+
+.filter-button:hover {
+  background-color: var(--gray-hover);
+}
+
+.filter-button:active {
+  background-color: var(--gray-activ);
+  color: var(--basic-black-active);
+  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+}
+
 /* Features */
 
 .main-features {
@@ -369,74 +440,6 @@ h1 {
   border: 2px solid var(--gray-super-light);
   border-radius: 50%;
   cursor: pointer;
-}
-
-/* Button */
-
-.button {
-  display: inline-block;
-  padding: 16px 54px;
-  font: inherit;
-  text-align: center;
-  color: var(--basic-color);
-  vertical-align: middle;
-  text-transform: uppercase;
-  background-color: var(--basic-red);
-  border: none;
-  border-radius: 3px;
-}
-
-.button:hover {
-  background-color: var(--red-hover);
-}
-
-.button:active {
-  background-color: var(--red-activ);
-  color: var(--basic-color-active);
-}
-
-.button-green {
-  background-color: var(--button-basic-green);
-}
-
-.button-green:hover {
-  background-color: var(--button-app-hover);
-}
-
-.button-green:active {
-  background-color: var(--button-app-activ);
-  color: var(--basic-color-active);
-}
-
-.button-yellow {
-  background-color: var(--button-basic-yellow);
-}
-
-.button-yellow:hover {
-  background-color: var(--button-presentation-hover);
-}
-
-.button-yellow:active {
-  background-color: var(--button-presentation-activ);
-  color: var(--basic-color-active);
-}
-
-.filter-button {
-  display: block;
-  width: 100%;
-  line-height: 18px;
-  background-color: var(--basic-gray);
-  color: var(--basic-black);
-}
-
-.filter-button:hover {
-  background-color: var(--gray-hover);
-}
-
-.filter-button:active {
-  background-color: var(--gray-activ);
-  color: var(--basic-black-active);
-  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
 }
 
 /* Services */
@@ -700,13 +703,49 @@ h1 {
   text-transform: none;
 }
 
-/* Popup */
+/* Modal */
+
+.appointment {
+  position: fixed;
+  top: 50px;
+  bottom: auto;
+  right: 0;
+  left: 0;
+  width: 760px;
+  padding: 60px 100px;
+  margin: auto;
+  background-color: var(--basic-color);
+  background-position: 0 0;
+  background-repeat: repeat;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.4);
+}
+
+.appointment-form {
+  display: grid;
+  grid-template-columns: 360px 360px;
+  column-gap: 40px;
+  row-gap: 34px;
+}
+
+.appointment-email {
+  grid-column: 2/3;
+}
+
+.appointment-comment{
+  grid-column: 1/3;
+}
 
 .appointment h2 {
   font-size: 45px;
   line-height: 53px;
   font-weight: 700;
   text-transform: none;
+  margin: 0;
+  margin-bottom: 37px;
+}
+
+.appointment-form p {
+  margin: 0;
 }
 
 .appointment-item label {
@@ -714,30 +753,56 @@ h1 {
   line-height: 18px;
   font-weight: 700;
   text-transform: none;
+  margin-bottom: 9px;
 }
 
-.appointment-item input {
+.appointment-item input,textarea {
+  display: block;
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
+  color: var(--basic-gray-dark);
+  opacity: 0.5;
+  padding: 16px;
   background-color: transparent;
   border: 2px solid var(--basic-gray-light);
 }
 
-.appointment-item input:hover {
+.appointment-form input {
+  width: 328px;
+}
+
+.appointment-item textarea {
+  resize: none;
+  width: 728px;
+ }
+
+.appointment-item input:hover,textarea:hover {
   border: 2px solid var(--gray-light);
   color: var(--basic-dark-hover);
 }
 
-.appointment-item input:focus {
+.appointment-item input:focus,textarea:focus {
   border: 2px solid var(--basic-black);
   color: var(--basic-gray-dark);
+}
+
+.appointment-item input:disabled,textarea:disabled {
+  border: 2px solid var(--red-hover);
+  color: var(--red-hover);
+}
+
+.appointment-button {
+  margin-top: 13px;
+  width: 259px;
 }
 
 .close-button {
   height: 21px;
   width: 21px;
   border: none;
+  background-color: transparent;
+  cursor: pointer;
   background-image: url(../img/close-cross.svg);
 }
 /* Grid */
