--- a/css/style.css
+++ b/css/style.css
@@ -1172,20 +1172,48 @@ border-bottom: 2px solid var(--basic-red);
   min-height: 578px;
   margin: 0;
   padding: 0;
-  padding-top: 40px;
 }
 
-.template-item::before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: 0px;
+.template-item:hover {
+  filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25));
+}
+
+.template-window {
+  position: relative;
   width: 358px;
   height: 40px;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   background-color: var(--basic-filter);
   opacity: 0.12;
+}
+
+.template-item:hover .template-window {
+  opacity: 1;
+}
+
+.template-circle,
+.template-circle::after,
+.template-circle::before {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: var(--basic-color);
+}
+
+.template-circle {
+  left: 39px;
+  top: 13px;
+}
+
+.template-circle::before {
+  right: 23px;
+}
+
+.template-circle::after {
+  left: 23px;
 }
 
 .template-item-description {
