--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,7 @@ border-bottom: 2px solid var(--basic-red);
 /* Services */
 
 .services {
-  margin-bottom: 121px;
+  margin-bottom: 91px;
 }
 
 .services-list {
@@ -458,6 +458,10 @@ border-bottom: 2px solid var(--basic-red);
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+.services-item {
+  margin-bottom: 30px;
 }
 
 .services-item h3 {
@@ -480,7 +484,7 @@ border-bottom: 2px solid var(--basic-red);
 
 .index-column {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 360px;
   column-gap: 100px;
   margin: 0;
   padding: 0;
@@ -582,6 +586,7 @@ border-bottom: 2px solid var(--basic-red);
 
 .clients {
   margin-bottom: 80px;
+  padding: 40px 0;
   border-top: 2px solid var(--basic-gray);
   border-bottom: 2px solid var(--basic-gray);
 }
@@ -590,7 +595,7 @@ border-bottom: 2px solid var(--basic-red);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 40px;
-  min-height: 184px;
+  row-gap: 20px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -1288,6 +1293,7 @@ border-bottom: 2px solid var(--basic-red);
 
 .pagination-item {
   margin-right: 11px;
+  margin-bottom: 10px;
 }
 
 .pagination-item a {
