--- a/css/style.css
+++ b/css/style.css
@@ -1258,6 +1258,8 @@ border-bottom: 2px solid var(--basic-red);
   width: 358px;
   height: 578px;
   margin: 0;
+  object-fit: contain;
+  background-color: var(--basic-dark);
 }
 
 .info-site {
