--- a/css/style.css
+++ b/css/style.css
@@ -957,8 +957,12 @@ border-bottom: 2px solid var(--basic-red);
 .filter fieldset {
   padding: 0;
   margin: 0;
-  margin-bottom: 43px;
+  margin-bottom: 30px;
   border: none;
+}
+
+.filter fieldset:first-child {
+  margin-bottom: 52px;
 }
 
 .filter-group {
@@ -1106,8 +1110,8 @@ border-bottom: 2px solid var(--basic-red);
 .filter-input-radio + label::before {
   content: "";
   position: absolute;
-  left: -36px;
-  top: -4px;
+  left: -37px;
+  top: -2px;
   width: 19px;
   height: 19px;
   border: 4px solid var(--basic-filter);
@@ -1118,7 +1122,7 @@ border-bottom: 2px solid var(--basic-red);
 .filter-input-radio:checked + label::after {
   content: "";
   position: absolute;
-  top: 5px;
+  top: 7px;
   left: -27px;
   width: 9px;
   height: 9px;
@@ -1196,18 +1200,18 @@ border-bottom: 2px solid var(--basic-red);
   grid-column: 2 / 3;
   padding: 0;
   margin: 0;
-  margin-bottom: 60px;
+  margin-bottom: 52px;
 }
 
 .template-list {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 40px;
-  row-gap: 30px;
+  row-gap: 31px;
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-bottom: 54px;
+  margin-bottom: 55px;
 }
 
 .template-item {
@@ -1263,7 +1267,7 @@ border-bottom: 2px solid var(--basic-red);
 .template-item-description {
   display: none;
   position: absolute;
-  bottom: 0px;
+  bottom: -1px;
   background-color: var(--basic-gray);
   text-align: center;
   width: 360px;
@@ -1316,11 +1320,11 @@ border-bottom: 2px solid var(--basic-red);
   display: block;
 }
 
-/* .template-button {
-  margin-top: 32px;
+.template-button {
+  padding: 17px 72px 15px;
   margin-bottom: 44px;
 }
-*/
+*
 
 /* Pagination */
 
@@ -1339,7 +1343,10 @@ border-bottom: 2px solid var(--basic-red);
 
 .pagination-item a {
   display: block;
-  padding: 13px 22px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  padding: 17px 20px 15px;
   color: var(--basic-black);
   background-color: var(--basic-gray);
   border-radius: 3px;
@@ -1363,11 +1370,11 @@ border-bottom: 2px solid var(--basic-red);
   background-color: var(--black-light);
   border: 3px solid var(--pagination-light);
   border-radius: 3px;
-  padding: 10px 19px;
+  padding: 14px 17px 12px;
 }
 
 .next a {
-  padding: 13px 78px;
+  padding: 17px 78px 15px;
 }
 
 .pagination-item:last-child {
